--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
 
   <script>
     /* ===== 설정 ===== */
-    const ADMIN_CHARACTERS = ['장용노예2호','애이르','오바때끼','우니꼬쏠쏠','미드미네머너','달빛로드','신쿠fr','아장르카용나','데헌장파튀'].slice(0,20);
+    const ADMIN_CHARACTERS = ['장용노예2호','애이르','오바때끼','우니꼬쏠쏠','미드미네머너','달빛로드','신쿠fr','아장르카용나','데헌장파튀','v아이요','텐겔','살려줘82'].slice(0,20);
     const ADMIN_BANNERS = {
       top:{img:'https://jangstar00.github.io/yong/images/topbaner_tech.png',link:'https://lostark.game.onstove.com/Class?detail=scouter'},
       left:{img:'https://jangstar00.github.io/yong/images/leftbaner_tech.png',link:'https://lostark.game.onstove.com/Class?detail=scouter'},
-      right:{img:'https://jangstar00.github.io/yong/images/rightbaner_mjmj.png',link:'https://lostark.game.onstove.com/Class?detail=scouter'},
+      right:{img:'https://jangstar00.github.io/yong/images/rightbaner_mjmj.png',link:'https://kloa.gg/characters/%EC%95%A0%EC%9D%B4%EB%A5%B4'},
       bottom:{img:'https://jangstar00.github.io/yong/images/topbaner_single.png',link:'https://kloa.gg/characters/%EC%95%A0%EC%9D%B4%EB%A5%B4'}
     };
     const API_BASE = 'https://yong-qgw8.vercel.app/api';
