--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       top:{img:'https://jangstar00.github.io/yong/images/topbaner_tech.png',link:'https://lostark.game.onstove.com/Class?detail=scouter'},
       left:{img:'https://jangstar00.github.io/yong/images/leftbaner_tech.png',link:'https://lostark.game.onstove.com/Class?detail=scouter'},
       right:{img:'https://jangstar00.github.io/yong/images/rightbaner_mj2.png',link:'https://kloa.gg/characters/%EC%95%A0%EC%9D%B4%EB%A5%B4'},
-      bottom:{img:'https://jangstar00.github.io/yong/images/topbaner_single2.png',link:'https://kloa.gg/characters/%EC%95%A0%EC%9D%B4%EB%A5%B4'}
+      bottom:{img:'https://jangstar00.github.io/yong/images/topbaner_single2.png',link:'https://kloa.gg/characters/%EB%A6%AC%EB%A6%AC%EB%A6%AC%EC%A7%B1'}
     };
     const API_BASE = 'https://yong-qgw8.vercel.app/api';
     const AUTO_MS = 60*60*1000;
