--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@
     .top-banner img,.bottom-banner img{width:100%;height:100%;object-fit:cover;display:block}
 
     /* 좌우 플로팅 배너 */
-    .side-float{position:fixed; top:160px; width:300px; z-index:50; background:rgba(0,0,0,.12); border-radius:12px; overflow:hidden}
+    .side-float{position:fixed; top:160px; width:300px; z-index:50;}
     .side-float.left{left:16px}
     .side-float.right{right:16px}
+    .float-card{background:rgba(0,0,0,.12); border-radius:12px; overflow:hidden}
     .side-float a{display:block; line-height:0}
     .side-float img{display:block; width:100%; height:auto; object-fit:cover}
+    .mini-stack{margin-top:12px; display:grid; gap:10px}
+    .mini{border-radius:12px; overflow:hidden; border:1px solid rgba(255,255,255,.12); background:rgba(0,0,0,.12)}
+    .mini img{width:100%; height:86px; object-fit:cover; display:block}
     @media (max-width:1200px){ .side-float{display:none} }
 
     .controls{display:flex;gap:8px;align-items:center;margin-bottom:8px}
@@ -118,9 +122,14 @@
     <section class="card bottom-banner" id="bn-bottom"></section>
   </div>
 
-  <!-- 좌우 플로팅 배너 노드 -->
-  <div id="float-left"  class="side-float left"  style="display:none"></div>
-  <div id="float-right" class="side-float right" style="display:none"></div>
+  <!-- 좌우 플로팅 배너 -->
+  <div id="float-left"  class="side-float left"  style="display:none">
+    <div class="float-card" id="float-left-main"></div>
+  </div>
+  <div id="float-right" class="side-float right" style="display:none">
+    <div class="float-card" id="float-right-main"></div>
+    <div class="mini-stack" id="float-right-minis" style="display:none"></div>
+  </div>
 
   <!-- 상세 모달 -->
   <div id="detailModal" class="modal" aria-modal="true" role="dialog">
@@ -186,12 +195,18 @@
 
   <script>
     /* ===== 설정 ===== */
-    const ADMIN_CHARACTERS = ['장용노예2호','애이르','오바때끼','우니꼬쏠쏠','미드미네머너','달빛로드','신쿠fr','아장르카용나','데헌장파튀','v아이요','텐겔','살려줘82'].slice(0,20);
+    const ADMIN_CHARACTERS = ['장용노예2호','애이르','오바때끼','우니꼬쏠쏠','미드미네머너','달빛로드','신쿠fr','아장르카용나','데헌장파튀'].slice(0,20);
     const ADMIN_BANNERS = {
       top:{img:'https://jangstar00.github.io/yong/images/topbaner_tech.png',link:'https://lostark.game.onstove.com/Class?detail=scouter'},
       left:{img:'https://jangstar00.github.io/yong/images/leftbaner_tech.png',link:'https://lostark.game.onstove.com/Class?detail=scouter'},
-      right:{img:'https://jangstar00.github.io/yong/images/rightbaner_mj2.png',link:'https://kloa.gg/characters/%EC%95%A0%EC%9D%B4%EB%A5%B4'},
-      bottom:{img:'https://jangstar00.github.io/yong/images/topbaner_single2.png',link:'https://kloa.gg/characters/%EB%A6%AC%EB%A6%AC%EB%A6%AC%EC%A7%B1'}
+      right:{img:'https://jangstar00.github.io/yong/images/rightbaner_tech.png',link:'https://lostark.game.onstove.com/Class?detail=scouter'},
+      /* 작은 배너 3개: 필요 없으면 배열 비워두면 됨 */
+      smallRight:[
+        {img:'https://jangstar00.github.io/yong/images/lostark.png', link:'https://lostark.game.onstove.com/Main'},
+        {img:'https://jangstar00.github.io/yong/images/lostbuild.png', link:'https://https://lostbuilds.com/'},
+        {img:'https://jangstar00.github.io/yong/images/kloa.png', link:'https://kloa.gg/'}
+      ],
+      bottom:{img:'https://jangstar00.github.io/yong/images/topbaner_mj.png',link:'https://kloa.gg/characters/%EC%95%A0%EC%9D%B4%EB%A5%B4'}
     };
     const API_BASE = 'https://yong-qgw8.vercel.app/api';
     const AUTO_MS = 60*60*1000;
@@ -206,35 +221,70 @@
     })();
 
     /* ===== 배너 ===== */
-    function createSideFloat(id, cfg){
-      const wrap = document.getElementById(id);
-      if(!wrap) return;
+    function injectMainBanner(containerId, cfg){
+      const wrap=document.getElementById(containerId);
       wrap.innerHTML='';
       if(cfg && cfg.img){
-        wrap.style.display='block';
         const a=document.createElement('a'); a.href=cfg.link||'#'; a.target='_blank'; a.rel='noopener';
-        const img=new Image(); img.src=cfg.img; img.alt=id;
+        const img=new Image(); img.src=cfg.img; img.alt=containerId;
         img.onerror=()=>{ wrap.innerHTML='<div class="small" style="padding:8px">배너 로드 실패</div>'; };
         a.appendChild(img); wrap.appendChild(a);
       }else{
-        wrap.style.display='none';
+        wrap.innerHTML='<div class="small" style="padding:8px">배너 미지정</div>';
       }
     }
     function loadBanners(){
-      const set=(pos,id)=>{const el=document.getElementById(id); const cfg=ADMIN_BANNERS[pos]; el.innerHTML='';
-        if(cfg && cfg.img){ const a=document.createElement('a'); a.href=cfg.link||'#'; a.target='_blank'; a.rel='noopener';
-          const img=new Image(); img.src=cfg.img; img.alt=pos; img.onerror=()=>{ el.innerHTML='<div class="small">'+pos+' 배너 로드 실패</div>'; };
-          a.appendChild(img); el.appendChild(a);
-        } else el.innerHTML='<div class="small">'+pos+' 배너 미지정</div>';
-      };
-      set('top','bn-top'); set('bottom','bn-bottom');
-      createSideFloat('float-left', ADMIN_BANNERS.left);
-      createSideFloat('float-right', ADMIN_BANNERS.right);
+      // 상단/하단
+      injectMainBanner('bn-top', ADMIN_BANNERS.top);
+      injectMainBanner('bn-bottom', ADMIN_BANNERS.bottom);
+
+      // 좌
+      const L=document.getElementById('float-left'); const LM=document.getElementById('float-left-main');
+      if(ADMIN_BANNERS.left && ADMIN_BANNERS.left.img){
+        L.style.display='block';
+        LM.innerHTML='';
+        const a=document.createElement('a'); a.href=ADMIN_BANNERS.left.link||'#'; a.target='_blank'; a.rel='noopener';
+        const img=new Image(); img.src=ADMIN_BANNERS.left.img; img.alt='left';
+        img.onerror=()=>{ LM.innerHTML='<div class="small" style="padding:8px">배너 로드 실패</div>'; };
+        a.appendChild(img); LM.appendChild(a);
+      }else{ L.style.display='none'; }
+
+      // 우: 메인 + 미니 3개
+      const R=document.getElementById('float-right');
+      const RM=document.getElementById('float-right-main');
+      const RS=document.getElementById('float-right-minis');
+      let showRight=false;
+
+      RM.innerHTML='';
+      if(ADMIN_BANNERS.right && ADMIN_BANNERS.right.img){
+        const a=document.createElement('a'); a.href=ADMIN_BANNERS.right.link||'#'; a.target='_blank'; a.rel='noopener';
+        const img=new Image(); img.src=ADMIN_BANNERS.right.img; img.alt='right';
+        img.onerror=()=>{ RM.innerHTML='<div class="small" style="padding:8px">배너 로드 실패</div>'; };
+        a.appendChild(img); RM.appendChild(a);
+        showRight=true;
+      }
+
+      RS.innerHTML='';
+      const minis=Array.isArray(ADMIN_BANNERS.smallRight)? ADMIN_BANNERS.smallRight.slice(0,3) : [];
+      if(minis.length){
+        RS.style.display='grid';
+        minis.forEach((m,i)=>{
+          const box=document.createElement('div'); box.className='mini';
+          const a=document.createElement('a'); a.href=m.link||'#'; a.target='_blank'; a.rel='noopener';
+          const img=new Image(); img.src=m.img; img.alt='mini-'+(i+1);
+          img.onerror=()=>{ box.innerHTML='<div class="small" style="padding:8px">미니 배너 실패</div>'; };
+          a.appendChild(img); box.appendChild(a); RS.appendChild(box);
+        });
+        showRight=true;
+      }else{
+        RS.style.display='none';
+      }
+      R.style.display = showRight? 'block':'none';
     }
 
     /* ===== 유틸 ===== */
     const setStatus=t=>$('#status').textContent=t;
-    const esc=s=>String(s||'').replace(/[&<>"']/g,m=>({"&":"&amp;","<":"&lt;"," >":"&gt;","\"":"&quot;","'":"&#39;"}[m]));
+    const esc=s=>String(s||'').replace(/[&<>"']/g,m=>({"&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#39;"}[m]));
     const strip=s=>String(s||'').replace(/<[^>]+>/g,' ').replace(/\s+/g,' ').trim();
     const fmtNum=n=>{
       if(n==null||n==='-') return '-';
@@ -426,7 +476,6 @@
       wrapL.innerHTML=''; wrapR.innerHTML='';
 
       const pct=x=>Math.max(0,Math.min(100,Number(x)||0));
-
       const makeBadges=(opts)=>{
         if(!opts||!opts.length) return '';
         const pills = opts.map(o=>{
@@ -523,11 +572,11 @@
         const results = await Promise.allSettled(ADMIN_CHARACTERS.map(fetchChar));
         const list = results.map((r,i)=> r.status==='fulfilled'? r.value : mockChar(ADMIN_CHARACTERS[i]));
         renderGrid(list);
-        try{ localStorage.setItem('gridCache_v21', JSON.stringify(list)); }catch(_){}
+        try{ localStorage.setItem('gridCache_v22', JSON.stringify(list)); }catch(_){}
         setStatus('완료');
       }catch(err){
         __dbg('refreshAll ERR', String(err && err.message || err));
-        try{ const cache = localStorage.getItem('gridCache_v21'); if(cache){ renderGrid(JSON.parse(cache)); setStatus('오프라인 캐시 표시'); return; } }catch(_){}
+        try{ const cache = localStorage.getItem('gridCache_v22'); if(cache){ renderGrid(JSON.parse(cache)); setStatus('오프라인 캐시 표시'); return; } }catch(_){}
         renderGrid(ADMIN_CHARACTERS.map(mockChar)); setStatus('네트워크 실패: 모의 데이터 표시');
       }
     }
