--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
     }
     *{box-sizing:border-box}
     html,body{height:100%}
-    body{margin:0; padding:clamp(10px, 2.6vw, 20px);
+    body{
+      margin:0; padding:clamp(10px, 2.6vw, 20px);
       font-family:'Noto Sans KR',system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;
       background:linear-gradient(180deg,#071016 0%, #07131a 60%);
-      color:#e8eef6; line-height:1.45; font-size:var(--fz-base);}
+      color:#e8eef6; line-height:1.45; font-size:var(--fz-base);
+    }
     .container{max-width:1000px;margin:0 auto;display:grid;gap:14px}
 
-    .card{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
-      border-radius:var(--radius);padding:14px;border:1px solid rgba(255,255,255,0.06);box-shadow:var(--shadow)}
+    .card{
+      background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+      border-radius:var(--radius);padding:14px;border:1px solid rgba(255,255,255,0.06);box-shadow:var(--shadow)
+    }
     .small{font-size:var(--fz-sm);color:var(--muted)}
     .xsmall{font-size:var(--fz-xs);color:var(--muted)}
     button{background:transparent;border:1px solid rgba(255,255,255,0.12);padding:8px 12px;border-radius:10px;color:var(--gold);cursor:pointer}
@@ -41,7 +45,10 @@
     .mini-stack{margin-top:12px; display:grid; gap:10px}
     .mini{border-radius:12px; overflow:hidden; border:1px solid rgba(255,255,255,.12); background:rgba(0,0,0,.12)}
     .mini img{width:100%; height:86px; object-fit:cover; display:block}
-    @media (max-width:1200px){ .side-float{display:none} }
+
+    /* 모바일 및 터치 디바이스에서 무조건 숨김 */
+    @media (max-width:1200px){ .side-float{display:none !important} }
+    @media (hover:none) and (pointer:coarse){ .side-float{display:none !important} }
 
     .controls{display:flex;gap:8px;align-items:center;margin-bottom:8px}
     .grid{display:grid;grid-template-columns:repeat(4,1fr);gap:10px}
@@ -199,12 +206,11 @@
     const ADMIN_BANNERS = {
       top:{img:'https://jangstar00.github.io/yong/images/topbaner_tech.png',link:'https://lostark.game.onstove.com/Class?detail=scouter'},
       left:{img:'https://jangstar00.github.io/yong/images/leftbaner_tech.png',link:'https://lostark.game.onstove.com/Class?detail=scouter'},
-      right:{img:'https://jangstar00.github.io/yong/images/rightbaner_mj2.png',link:'https://lostark.game.onstove.com/Class?detail=scouter'},
-      /* 작은 배너 3개: 필요 없으면 배열 비워두면 됨 */
+      right:{img:'https://jangstar00.github.io/yong/images/rightbaner_tech.png',link:'https://lostark.game.onstove.com/Class?detail=scouter'},
       smallRight:[
-        {img:'https://jangstar00.github.io/yong/images/lostark.png', link:'https://lostark.game.onstove.com/Main'},
-        {img:'https://jangstar00.github.io/yong/images/lostbuild.png', link:'https://https://lostbuilds.com/'},
-        {img:'https://jangstar00.github.io/yong/images/kloa.png', link:'https://kloa.gg/'}
+        {img:'https://jangstar00.github.io/yong/images/mini_ad_1.png', link:'https://lostark.game.onstove.com/News/Notice/Views/1'},
+        {img:'https://jangstar00.github.io/yong/images/mini_ad_2.png', link:'https://lostark.game.onstove.com/News/Notice/Views/2'},
+        {img:'https://jangstar00.github.io/yong/images/mini_ad_3.png', link:'https://lostark.game.onstove.com/News/Notice/Views/3'}
       ],
       bottom:{img:'https://jangstar00.github.io/yong/images/topbaner_mj.png',link:'https://kloa.gg/characters/%EC%95%A0%EC%9D%B4%EB%A5%B4'}
     };
@@ -233,23 +239,20 @@
         wrap.innerHTML='<div class="small" style="padding:8px">배너 미지정</div>';
       }
     }
-    function loadBanners(){
-      // 상단/하단
-      injectMainBanner('bn-top', ADMIN_BANNERS.top);
-      injectMainBanner('bn-bottom', ADMIN_BANNERS.bottom);
 
+    function renderSideBanners(){
       // 좌
       const L=document.getElementById('float-left'); const LM=document.getElementById('float-left-main');
       if(ADMIN_BANNERS.left && ADMIN_BANNERS.left.img){
-        L.style.display='block';
         LM.innerHTML='';
         const a=document.createElement('a'); a.href=ADMIN_BANNERS.left.link||'#'; a.target='_blank'; a.rel='noopener';
         const img=new Image(); img.src=ADMIN_BANNERS.left.img; img.alt='left';
         img.onerror=()=>{ LM.innerHTML='<div class="small" style="padding:8px">배너 로드 실패</div>'; };
         a.appendChild(img); LM.appendChild(a);
+        L.style.display='block';
       }else{ L.style.display='none'; }
 
-      // 우: 메인 + 미니 3개
+      // 우: 메인 + 미니
       const R=document.getElementById('float-right');
       const RM=document.getElementById('float-right-main');
       const RS=document.getElementById('float-right-minis');
@@ -280,6 +283,29 @@
         RS.style.display='none';
       }
       R.style.display = showRight? 'block':'none';
+    }
+
+    // 강제 토글: 모바일/터치 환경에서 무조건 숨김
+    function toggleSideFloatsForViewport(){
+      const hide = window.matchMedia('(max-width: 1200px)').matches
+                || window.matchMedia('(hover: none) and (pointer: coarse)').matches
+                || window.innerWidth < 1200;
+      const L=document.getElementById('float-left');
+      const R=document.getElementById('float-right');
+      if(hide){
+        if(L) L.style.display='none';
+        if(R) R.style.display='none';
+      }else{
+        // 데스크톱이면 렌더링 상태 유지
+        renderSideBanners();
+      }
+    }
+
+    function loadBanners(){
+      injectMainBanner('bn-top', ADMIN_BANNERS.top);
+      injectMainBanner('bn-bottom', ADMIN_BANNERS.bottom);
+      renderSideBanners();
+      toggleSideFloatsForViewport();
     }
 
     /* ===== 유틸 ===== */
@@ -572,11 +598,11 @@
         const results = await Promise.allSettled(ADMIN_CHARACTERS.map(fetchChar));
         const list = results.map((r,i)=> r.status==='fulfilled'? r.value : mockChar(ADMIN_CHARACTERS[i]));
         renderGrid(list);
-        try{ localStorage.setItem('gridCache_v22', JSON.stringify(list)); }catch(_){}
+        try{ localStorage.setItem('gridCache_v23', JSON.stringify(list)); }catch(_){}
         setStatus('완료');
       }catch(err){
         __dbg('refreshAll ERR', String(err && err.message || err));
-        try{ const cache = localStorage.getItem('gridCache_v22'); if(cache){ renderGrid(JSON.parse(cache)); setStatus('오프라인 캐시 표시'); return; } }catch(_){}
+        try{ const cache = localStorage.getItem('gridCache_v23'); if(cache){ renderGrid(JSON.parse(cache)); setStatus('오프라인 캐시 표시'); return; } }catch(_){}
         renderGrid(ADMIN_CHARACTERS.map(mockChar)); setStatus('네트워크 실패: 모의 데이터 표시');
       }
     }
@@ -585,6 +611,12 @@
     document.addEventListener('DOMContentLoaded', ()=>{
       loadBanners();
       refreshAll();
+
+      // 모바일 강제 숨김 토글
+      const recheck = ()=>toggleSideFloatsForViewport();
+      window.addEventListener('resize', recheck, {passive:true});
+      window.addEventListener('orientationchange', recheck, {passive:true});
+
       $('#refreshAll').addEventListener('click', refreshAll);
       $('#closeDetail').addEventListener('click', ()=>$('#detailModal').classList.remove('on'));
       $('#detailModal').addEventListener('click', e=>{ if(e.target.id==='detailModal') $('#detailModal').classList.remove('on'); });
