--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
   <script>
     /* ===== 관리자 설정 ===== */
-    const ADMIN_CHARACTERS = ['장용노예2호','애이르','오바때끼','우니꼬쏠쏠','미드미네머너','달빛로드','신쿠fr','아장르카용나','데헌장파튀'].slice(0,20);
+    const ADMIN_CHARACTERS = ['장용노예2호','애이르','오바때끼','우니꼬쏠쏠','미드미네머너','달빛로드','신쿠fr','아장르카용나','데헌장파튀','워로드너프장본인','소울E컵'].slice(0,20);
 
     const ADMIN_BANNERS = {
       top:    { img: 'https://jangstar00.github.io/yong/images/topbaner_tech.png',   link: 'https://lostark.game.onstove.com/Class?detail=scouter' },
@@ -202,9 +202,9 @@
       right:  { img: 'https://jangstar00.github.io/yong/images/rightbaner_tech.png', link: 'https://lostark.game.onstove.com/Class?detail=scouter' },
       bottom: { img: 'https://jangstar00.github.io/yong/images/topbaner_single2.png', link: 'https://kloa.gg/characters/%EC%95%A0%EC%9D%B4%EB%A5%B4' },
       rightMini: [
-        { img: 'https://jangstar00.github.io/yong/images/mini1.png', link: 'https://kloa.gg' },
-        { img: 'https://jangstar00.github.io/yong/images/mini2.png', link: 'https://iloa.gg' },
-        { img: 'https://jangstar00.github.io/yong/images/mini3.png', link: 'https://lopec.kr' },
+        { img: 'https://jangstar00.github.io/yong/images/kloa.png', link: 'https://kloa.gg' },
+        { img: 'https://jangstar00.github.io/yong/images/lostbuild.png', link: 'https://lostbuilds.com/' },
+        { img: 'https://jangstar00.github.io/yong/images/lostark.png', link: 'https://lostark.game.onstove.com/Main' },
       ]
     };
 
